--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 17 11:34:11 PDT 2019
-sdk.dir=/Users/ayaan/Library/Android/sdk
+#Sun Nov 17 10:31:55 PST 2019
+sdk.dir=C\:\\Users\\benco\\AppData\\Local\\Android\\Sdk
